--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -6,6 +6,10 @@
     <title>Listings</title>
 </head>
 <body>
-    
+    <ul>
+        <% for(listing of allListings) { %>
+            <li><a href="/listing/<%= listing._id %>"><%= listing.title %></a></li>
+        <% } %>
+    </ul>
 </body>
 </html>
