--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -6,6 +6,10 @@
     <title>Listings</title>
 </head>
 <body>
+    <h1>My Listings</h1>
+    <form action="http://localhost:8080/listing/new" method="get">
+        <button>Create New Listing</button>
+    </form>
     <ul>
         <% for(listing of allListings) { %>
             <li><a href="/listing/<%= listing._id %>"><%= listing.title %></a></li>
