Added Editing functionality for each listing and updated index.ejs with a 'Edit' button for each listing

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -10,7 +10,7 @@
 
     <img src="<%= listing.image %>" alt="">
     <h4>Name : <%= listing.title %> </h4>
-    <h4>Desciption : <%= listing.desciption %> </h4>
+    <h4>Desciption : <%= listing.description %> </h4>
     <h4>Price : &#8377;<%= listing.price.toLocaleString("en-IN") %></h4>
     <h4>Location : <%= listing.location %>, <%= listing.country %></h4>
 </body>
