--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -12,7 +12,9 @@
     </form>
     <ul>
         <% for(listing of allListings) { %>
-            <li><a href="/listing/<%= listing._id %>"><%= listing.title %></a></li>
+            <li><a href="/listing/<%= listing._id %>"><%= listing.title %></a><form action="http://localhost:8080/listing/<%= listing._id %>/edit" method="get">
+                <button>Edit</button>
+            </form></li>
         <% } %>
     </ul>
 </body>
