"Updated PUT and DELETE routes for listings, and modified EJS templates for listing index and show pages to include edit and delete functionality."

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -12,9 +12,10 @@
     </form>
     <ul>
         <% for(listing of allListings) { %>
-            <li><a href="/listing/<%= listing._id %>"><%= listing.title %></a><form action="http://localhost:8080/listing/<%= listing._id %>/edit" method="get">
-                <button>Edit</button>
-            </form></li>
+            <li><a href="/listing/<%= listing._id %>"><%= listing.title %></a></li>
+            <form action="http://localhost:8080/listing/<%= listing._id %>?_method=DELETE" method="post">
+                <button>Delete</button>
+            </form>
         <% } %>
     </ul>
 </body>
