--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listings</title>
-</head>
+<% layout("layouts/boilerplate.ejs") %>
 <body>
     <h1>My Listings</h1>
     <form action="http://localhost:8080/listing/new" method="get">
@@ -16,4 +10,3 @@
         <% } %>
     </ul>
 </body>
-</html>
