--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit</title>
-</head>
+<% layout("layouts/boilerplate.ejs") %>
 <body>
     <h1>Editing <%= listing.title %></h1>
     <form action="http://localhost:8080/listing/<%= listing._id %>?_method=PUT" method="post">
@@ -23,4 +17,3 @@
         <button>Edit Listing</button>
     </form>
 </body>
-</html>
