--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,3 +11,41 @@
 .nav-link{
     color: #000000  !important;
 }
+
+footer{
+    background-color: #D3CDD7;
+    width: 100vw;
+    height: 20vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.f-socials{
+    font-size: 2rem;
+}
+
+.fa-brands{
+    margin-left: 10px;
+}
+
+.f-name{
+    margin-left: 10px;
+    margin-top: 20px;
+}
+
+.f-info-links{
+    margin-top: 20px;
+}
+
+.f-info-links a{
+    text-decoration: none;
+    margin-left: 10px;
+    color: #000000;
+}
+
+::-webkit-scrollbar{
+    display: none;
+}
