--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+
+body{
+    font-family: "Plus Jakarta Sans", sans-serif !important;
+}
+
 .navbar{
     height: 5rem;
     background-color: white;
@@ -48,4 +54,41 @@ footer{
 
 ::-webkit-scrollbar{
     display: none;
+}
+
+.card{
+    border: none !important;
+    margin-bottom: 2rem !important;
+}
+
+.card-img-top{
+    border-radius: 1rem !important;
+    width: 100% !important;
+    object-fit: cover !important;
+}
+
+.card-body{
+    padding: 0 !important;
+}
+
+.card-text p{
+    font-weight: 600 !important;
+}
+
+.card-text a{
+    text-decoration: none !important;
+    color: #000000 !important;
+}
+
+.listing-link{
+    text-decoration: none !important;
+}
+
+.card-img-overlay{
+    opacity: 0;
+}
+
+.card-img-overlay:hover{
+    opacity: 0.2;
+    background-color: white;
 }
