--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,10 +1,18 @@
 <% layout("layouts/boilerplate.ejs") %>
 <body>
     <h1>My Listings</h1>
-    <ul>
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
         <% for(listing of allListings) { %>
-            <li><a href="/listing/<%= listing._id %>"><%= listing.title %></a></li>
-            
+            <a href="http://localhost:8080/listing/<%= listing._id %>" class="listing-link">
+                <div class="card col">
+                    <img src="<%= listing.image %>" class="card-img-top" style="height: 18rem;" alt="...">
+                    <div class="card-img-overlay"></div>
+                    <div class="card-body">
+                      <b><p class="card-text"><%= listing.title %></p></b>
+                      <p class="card-text">Price : &#8377;<%= listing.price.toLocaleString("en-IN") %></p>
+                    </div>
+                </div>
+            </a>
         <% } %>
-    </ul>
+    </div>
 </body>
