--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,19 +1,31 @@
 <% layout("layouts/boilerplate.ejs") %>
 <body>
     <h1>Add a New Listing</h1>
+    <br><br>
     <form action="http://localhost:8080/listing" method="post">
-        <input type="text" name="title" id="" placeholder="Title">
+        <label for="title" class="form-label">Title: </label>
+        <input type="text" name="title" id="" placeholder="Title" class="form-control">
         <br><br>
-        <textarea name="description" id="" placeholder="description"></textarea>
+        <label for="description" class="form-label">Description: </label>
+        <textarea name="description" id="" placeholder="description" class="form-control"></textarea>
         <br><br>
-        <input type="text" name="image" id="" placeholder="image">
+        <label for="image" class="form-label">Image Url: </label>
+        <input type="text" name="image" id="" placeholder="image" class="form-control">
         <br><br>
-        <input type="number" name="price" id="" placeholder="price">
+        <div class="row">
+            <div class="col-4">
+                <label for="price" class="form-label">Price: </label>
+                <input type="number" name="price" id="" placeholder="price" class="form-control">
+            </div>
+            <div class="col-8">
+                <label for="country" class="form-label">Country: </label>
+                <input type="text" name="country" id="" placeholder="country" class="form-control">
+            </div>
+        </div>
         <br><br>
-        <input type="text" name="location" id="" placeholder="location">
+        <label for="location" class="form-label">Location: </label>
+        <input type="text" name="location" id="" placeholder="location" class="form-control">
         <br><br>
-        <input type="text" name="country" id="" placeholder="country">
-        <br><br>
-        <button>Add Listing</button>
+        <button class="btn btn-outline-success">Add Listing</button>
     </form>
 </body>
