--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,17 +1,33 @@
 <% layout("layouts/boilerplate.ejs") %>
 <body>
-    <h3>Listing Details</h3>
-
-    <img src="<%= listing.image %>" alt="">
-    <h4>Name : <%= listing.title %> </h4>
-    <h4>Desciption : <%= listing.description %> </h4>
-    <h4>Price : &#8377;<%= listing.price.toLocaleString("en-IN") %></h4>
-    <h4>Location : <%= listing.location %>, <%= listing.country %></h4>
-    <form action="http://localhost:8080/listing/<%= listing._id %>/edit" method="get">
-        <button>Edit</button>
-    </form>
-    <br>
-    <form action="http://localhost:8080/listing/<%= listing._id %>?_method=DELETE" method="post">
-        <button>Delete</button>
-    </form>
+    <div class="row">
+        <div class="col-8 offset-2">
+            <h3>Listing Details</h3>
+        </div>
+        <div class="col-6 offset-2">
+            <div class="card">
+                <img src="<%= listing.image %>" alt="image" class="card-img-top show-img">
+                <div class="card-body">
+                    <h4 class="card-title"><%= listing.title %></h4>
+                    <ul>
+                        <li><h5 class="card-text">Description : <%= listing.description %> </h5></li>
+                        <li><h5 class="card-text">Price : &#8377;<%= listing.price.toLocaleString("en-IN") %></h5></li>
+                        <li><h5 class="card-text">Location : <%= listing.location %>, <%= listing.country %></h5></li>
+                    </ul>
+                </div>
+                <div class="row">
+                    <div class="col-2">
+                        <form action="http://localhost:8080/listing/<%= listing._id %>/edit" method="get">
+                            <button class="btn btn-outline-warning">Edit</button>
+                        </form>
+                    </div>
+                    <div class="col-4">
+                        <form action="http://localhost:8080/listing/<%= listing._id %>?_method=DELETE" method="post">
+                            <button class="btn btn-outline-danger">Delete</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
